--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "15.1.0",
     "pdfjs-dist": "^4.4.168",
@@ -17,6 +18,7 @@
     "react-dropzone": "^14.3.8"
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19",
