--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
