--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "export": "next export",
     "start": "next start",
     "lint": "eslint"
@@ -16,10 +16,10 @@
     "jspdf": "^4.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
-    "next": "15.1.0",
+    "next": "^16.1.3",
     "pdfjs-dist": "^4.4.168",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.8"
   },
   "devDependencies": {
