--- a/package.json
+++ b/package.json
@@ -1,39 +1,30 @@
 {
-  "name": "temp_app",
-  "version": "0.1.0",
+  "name": "parse-pdf",
   "private": true,
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build --webpack",
-    "export": "next export",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "jspdf": "^4.0.0",
+    "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.562.0",
-    "next": "^16.1.3",
-    "pdfjs-dist": "^4.4.168",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-dropzone": "^14.3.8"
+    "lucide-react": "^0.344.0",
+    "pdfjs-dist": "3.11.174",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
-    "@types/jspdf": "^1.3.3",
-    "@types/jszip": "^3.4.0",
-    "@types/node": "^20",
-    "@types/pdfjs-dist": "^2.10.377",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.6"
   }
 }
