--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "pdfjs-dist": "3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
